fix design mistake that cut off error message in mobile view.

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -73,7 +73,7 @@
   margin: auto;
   margin-bottom: 10px;
   padding-right: 10px;
-  height: 35px;
+  height: 60px;
 }
 
 #error-msg {
